PyQuest/src/test/parsing/valid/test010.ql
// Form with computed question
form label {
  "Question?"
    var: boolean = true
}