PyQuest/src/test/parsing/invalid/test021.ql
form label {
    if (1) {
        "Question?"
        id : boolean
    }
}